[package]
name = "denopy"
version = "0.4.0"
edition = "2021"
authors = [
    "Tuấn-Anh Nguyễn <ubolonton@gmail.com>",
]

[lib]
name = "denopy"
crate-type = ["cdylib"]

[dependencies]
tokio = { version = "1.35.1", features = ["full"] }
pyo3 = { version = "0.19.0", features = ["abi3-py38", "anyhow"] }
deno_core = "0.242.0"
