[package]
name = "denopy"
version = "0.5.0"
edition = "2021"
description = "Bare-minimum binding of deno_core, for embedding JavaScript in Python."
homepage = "https://github.com/ubolonton/denopy"
authors = [
    "Tuấn-Anh Nguyễn <ubolonton@gmail.com>",
]
license = "BSD-3-Clause"
readme = "README.md"

[lib]
name = "denopy"
crate-type = ["cdylib"]

[dependencies]
tokio = { version = "1.35.1", features = ["full"] }
pyo3 = { version = "0.19.0", features = ["abi3-py38", "anyhow"] }
deno_core = "0.242.0"
