[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "denopy"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.4",
]

[tool.maturin]
# module-name = "denopy._denopy"
features = ["pyo3/extension-module"]
exclude = [".gitignore", ".github/**/*"]
